metrique-macro/src/snapshots/metrique_macro__tests__simple_metrics_value_struct.snap
---
source: metrique-macro/src/lib.rs
expression: parsed_file
---
struct RequestValue {
    ignore: u32,
    value: u32,
}
#[doc(hidden)]
#[allow(clippy::type_complexity)]
pub struct RequestValueValue {
    #[deprecated(
        note = "these fields will become private in a future release. To introspect an entry, use `metrique::writer::test_util::test_entry`"
    )]
    #[doc(hidden)]
    value: <u32 as metrique::CloseValue>::Closed,
}
impl ::metrique::writer::Value for RequestValueValue {
    const SHAPE: ::metrique::writer::core::descriptor::FieldShape<'static> = <<u32 as ::metrique::CloseValue>::Closed as ::metrique::writer::Value>::SHAPE;
    fn write(&self, writer: impl ::metrique::writer::ValueWriter) {
        #[allow(deprecated)]
        {
            ::metrique::writer::Value::write(&self.value, writer);
        }
    }
}
impl metrique::CloseValue for &'_ RequestValue {
    type Closed = RequestValueValue;
    fn close(self) -> Self::Closed {
        macro_rules! __metrique_self_expr {
            () => {
                self
            };
        }
        #[allow(deprecated)]
        RequestValueValue {
            value: metrique::CloseValue::close(
                ::metrique::IfYouSeeThisUseSubfieldOwned(&__metrique_self_expr!().value),
            ),
        }
    }
}
impl metrique::CloseValue for RequestValue {
    type Closed = RequestValueValue;
    fn close(self) -> Self::Closed {
        <&Self>::close(&self)
    }
}
